--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/about-style.css">
-    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <link rel="stylesheet" href="css/about-style.css"  integrity="sha384-KZYV+azrhFkuovWqf3KF93S/WThEKj3K5xXIaVB5UIcHeqs4CfdZap0AyLp/wOol" integrity="sha512-jSys7vu4EpEhOF9/qepeSPAVEVD97R1ZfUxNrU6rmhW3OCXzr7pgji/1b1W+/0dbjvBbxk4VPyk9tRlJFGsGUA==">
+    <link rel="stylesheet" href="css/style.css"  integrity="sha384-k+2C501+hkP4gpvHxb9jZjBNFe+vx7ETuOc91IgJUPUnmVnNKAWpbbX7F2lsbICy" integrity="StxKCw1ZL+ANnHAAT9hsRF519lhJQcskrcDniaiuCh/pV4Wd+6jUtaFvGSc/ZKeeOdKyau3gQgTG34Zu6AhmEA==">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 </head>
 
 <body>
