--- a/blog.html
+++ b/blog.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Landing</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/blog-landing-style.css">
-    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <link rel="stylesheet" href="css/blog-landing-style.css" integrity="sha384-cyibTmX9HWEwBq2mdlPodXVA94nPubNyzjwGq96+rV1GdQpYzm4qKS6JHHo1/OB/" integrity="sha512-+wcWQM9Jfw277n98a1+26t5BI9AGP+II5GgBPU5UeF1WdEMIl3llouwbfkoOxK6nWv1++azXH0nRseASLYsP8Q==">
+    <link rel="stylesheet" href="css/style.css"  integrity="sha384-k+2C501+hkP4gpvHxb9jZjBNFe+vx7ETuOc91IgJUPUnmVnNKAWpbbX7F2lsbICy" integrity="StxKCw1ZL+ANnHAAT9hsRF519lhJQcskrcDniaiuCh/pV4Wd+6jUtaFvGSc/ZKeeOdKyau3gQgTG34Zu6AhmEA==">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 </head>
 
 <body>
@@ -43,6 +43,7 @@
                 <h3>Creating this Portfolio - Day 5</h3>
                 <time>Posted on August 31 2020</time>
             </a>
+            <!-- blog-preview section added, only shown if screen width >767px -->
             <section class="blog-preview">
                 <p>On day 5 of working on the portfolio Jeremy discovers the benefit of throwing it all out and starting
                     again </p>
