--- a/blog1.html
+++ b/blog1.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Day 1</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/blog-post-style.css">
-    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <link rel="stylesheet" href="css/style.css"  integrity="sha384-k+2C501+hkP4gpvHxb9jZjBNFe+vx7ETuOc91IgJUPUnmVnNKAWpbbX7F2lsbICy" integrity="StxKCw1ZL+ANnHAAT9hsRF519lhJQcskrcDniaiuCh/pV4Wd+6jUtaFvGSc/ZKeeOdKyau3gQgTG34Zu6AhmEA==">
+    <link rel="stylesheet" href="css/blog-post-style.css" integrity="sha384-pinuAD1xTPLPvMchs/vEni8lXDJu0r4rB3oElzigabU057N21HonN8iZOv9nicZU" integrity="sha512-k4JunpW+KcEHeNPRtXpZl7fzpOZrRd626G6nQXQWB7upWRibnfDwW7dV265uIN5uMOtRvvZHu1bpaz8Tbj7RJg==">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 </head>
 
 <body>
