--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/contact-style.css">
-    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+
+    <link rel="stylesheet" href="css/contact-style.css" integrity="sha384-i0W7PJT2ZSWwUaJ2zSnoArQLOSOJAQchLlSvGZ1uihiGWyMGxb9FvbcCalxxb6Ad" integrity="CB9dBhrlnhfLqiGwRwZSOR2h3jGfAr1TElzrM7i2GLKUvHzwd8XYwk/DjguIzsjmWdNoVoxnAP0UVsvHesXrdQ==">
+    <link rel="stylesheet" href="css/style.css"  integrity="sha384-k+2C501+hkP4gpvHxb9jZjBNFe+vx7ETuOc91IgJUPUnmVnNKAWpbbX7F2lsbICy" integrity="StxKCw1ZL+ANnHAAT9hsRF519lhJQcskrcDniaiuCh/pV4Wd+6jUtaFvGSc/ZKeeOdKyau3gQgTG34Zu6AhmEA==">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 </head>
 
 <body>
