--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/index-style.css">
-    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <link rel="stylesheet" href="css/style.css"  integrity="sha384-k+2C501+hkP4gpvHxb9jZjBNFe+vx7ETuOc91IgJUPUnmVnNKAWpbbX7F2lsbICy" integrity="StxKCw1ZL+ANnHAAT9hsRF519lhJQcskrcDniaiuCh/pV4Wd+6jUtaFvGSc/ZKeeOdKyau3gQgTG34Zu6AhmEA==">
+    <link rel="stylesheet" href="css/index-style.css" integrity="sha384-uQEvX1Fg6pxDQgri4wNIWrrcQmueABCxLkos25cLWYsCsOa9gIYkKoybM8VcLI/P" integrity="sha512-CBRRPKwqVPa8aHHK4nLSc6PM4pJ3QUji4jjg6B6FQ6SZGQrwALpPicJmIeLDB9dvEwMbuNAoOQuhHWPP/wH8ug==">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 </head>
 <body>
 <!-- Parent grid helps center rest of the page  -->
